--- a/static/usuarios_css/login.css
+++ b/static/usuarios_css/login.css
@@ -34,15 +34,37 @@ body{
     width: 100px;
 }
 
+.icon-box { 
+    background-color: #e0e0e0; /* Cor cinza */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px; /* Largura do bloco cinza */
+    height: 100%; /* Altura igual à do input */
+    border-radius: 4px 0 0 4px;
+}
+
+.input-group .form-control {
+    border-radius: 0 4px 4px 0;
+}
+
+/*
+.input-group .input-group-prepend {
+    border-top-left-radius: 4px !important;
+    border-bottom-left-radius: 4px !important;
+}
+*/
+
+
 .login-title {
     font-size: 1.8rem; /* Ajuste o tamanho do título */
     margin-bottom: 20px; /* Espaçamento inferior */
 }
 
 .input-custom {
-    width: 300px;
-    margin: 0 auto 15px auto; /* Margem inferior para espaçamento */
+    width: 100%; /* Assegura que o input ocupe toda a largura disponível */
 }
+
 
 .btn-custom {
     width: 100%;
@@ -51,11 +73,10 @@ body{
     border: none;
 }
 
+
 .btn-custom:hover {
     background-color: #8700ca; /* Cor roxa mais clara para o hover */
 }
-
-/* Estilo para o alerta */
 
 /* Estilo para o alerta */
 .alert {
@@ -71,27 +92,3 @@ body{
     padding-top: 0.5px; /* Ajuste conforme necessário para a altura do alerta */
 }
 
-/* Estilos responsivos */
-/* @media (max-width: 768px) {
-    .login-box {
-        padding: 20px;
-    }
-
-    .login-title {
-        font-size: 1.25rem;
-    }
-
-    .input-custom, .btn-custom {
-        max-width: 100%;
-    }
-}
-
-@media (max-width: 576px) {
-    .login-box {
-        padding: 15px;
-    }
-
-    .login-title {
-        font-size: 1rem;
-    }
-} */
