--- a/templates/usuarios_template/login.html
+++ b/templates/usuarios_template/login.html
@@ -8,6 +8,8 @@
     <title>Login Portal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="{% static 'usuarios_css/login.css' %}" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ea2639072d.js" crossorigin="anonymous"></script>
+</body>
 </head>
 <body>
     <div class="col-md-6 offset-md-3">
@@ -20,20 +22,28 @@
             <img class="img-vivo" src="{% static '/img/vivinho.png' %}" alt="logo_vivo">
             <h1 class="text-center login-title">Bem-vindo ao Portal</h1>
             <br/>
-            <form method="POST" action="{% url 'login' %}" class="d-flex flex-column align-items-center">
+            <form method="POST" action="{% url 'login' %}" class="d-flex flex-column align-items-center"> 
                 {% csrf_token %}
-                <div class="mb-3 w-100">
+                <div class="input-group mb-3 w-100">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text icon-box"><i class="fas fa-user"></i></span>
+                    </div>
                     <input type="text" class="form-control input-custom" id="username" name="username" placeholder="Usuário" required>
                 </div>
-                <div class="mb-3 w-100">
+                <div class="input-group mb-3 w-100">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text icon-box"><i class="fas fa-lock"></i></span>
+                    </div>
                     <input type="password" class="form-control input-custom" id="password" name="password" placeholder="Senha" required>
                 </div>
+                <br/>
                 <button type="submit" class="btn btn-primary btn-custom">Entrar</button>
             </form>
+            
         </div>
     </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    
 </html>
