--- a/templates/website_template/base.html
+++ b/templates/website_template/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -5,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="{% static 'website_css/base.css' %}" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ea2639072d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     {% include 'website_template/navbar.html' %}
