--- a/templates/website_template/navbar.html
+++ b/templates/website_template/navbar.html
@@ -1,3 +1,45 @@
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+  <div class="container-fluid">
+      <a class="navbar-brand" href="#">Brand</a>
+      <div id="alerta" class="col-md-6 offset-md-3">
+        {% include 'partials/_alertas.html' %}
+      </div>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                  <a class="nav-link user_btn" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                    <i class="fa-solid fa-circle-user"></i>
+                      {{ user.username }}
+                  </a>
+              </li>
+          </ul>
+      </div>
+  </div>
+</nav>
+
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+  <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">
+        <a class="nav-link user_btn">
+          <i class="fa-solid fa-circle-user"></i>
+            {{ user.username }}
+        </a>
+      </h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+      <ul class="list-group">
+          <li class="list-group-item"><a href="#">Profile</a></li>
+          <li class="list-group-item"><a href="#">Settings</a></li>
+          <li class="list-group-item"><a href="{% url 'logout' %}">Logout</a></li>
+      </ul>
+  </div>
+</div>
+
+
+<!--
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'index' %}">Portal</a>
@@ -11,14 +53,18 @@
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
 
+          
           {% else %}
 
           <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">Login</a>
           </li>
 
+          
+
           {% endif %}
         </ul>
       </div>
     </div>
-  </nav>
+</nav>
+-->
