--- a/templates/website_template/navbar.html
+++ b/templates/website_template/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid">
       <a class="navbar-brand" href="#">Brand</a>
-      <div id="alerta" class="col-md-6 offset-md-3">
+      <div id="alerta" class="alerta">
         {% include 'partials/_alertas.html' %}
       </div>
       <div class="collapse navbar-collapse" id="navbarNav">
