--- a/templates/website_template/navbar.html
+++ b/templates/website_template/navbar.html
@@ -2,41 +2,50 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid">
-      <a class="navbar-brand" href="#">Brand</a>
-      <div id="alerta" class="alerta">
-        {% include 'partials/_alertas.html' %}
-      </div>
-      <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                  <a class="nav-link user_btn" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                    <i class="fa-solid fa-circle-user"></i>
-                      {{ user.username }}
-                  </a>
-              </li>
-          </ul>
-      </div>
+    <a class="navbar-brand" href="#">Portal</a>
+    <div id="alerta" class="alerta">
+      {% include 'partials/_alertas.html' %}
+    </div>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link user_btn" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+            <i class="fa-solid fa-circle-user"></i>
+            {{ user.username }}
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
   <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasExampleLabel">
-        <a class="nav-link user_btn">
-          <i class="fa-solid fa-circle-user"></i>
-            {{ user.username }}
-        </a>
-      </h5>
-      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    <h5 class="offcanvas-title" id="offcanvasExampleLabel">
+      <a class="nav-link user_btn">
+        <i class="fa-solid fa-circle-user"></i>
+        {{ user.username }}
+      </a>
+    </h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
+  <hr class="divider">
   <div class="offcanvas-body">
-      <ul class="list-group">
-          <li class="list-group-item"><a href="#">Profile</a></li>
-          <li class="list-group-item"><a href="#">Settings</a></li>
-          <li class="list-group-item"><a href="{% url 'logout' %}">Logout</a></li>
-      </ul>
+    <ul class="list-group custom-list">
+      <li class="list-group-item">
+        <a href="#">Profile</a>
+      </li>
+      <li class="list-group-item">
+        <a href="#">Settings</a>
+      </li>
+      <li class="list-group-item logout-item">
+        <a href="{% url 'logout' %}">Logout</a>
+      </li>
+    </ul>
   </div>
 </div>
+
+
 
 
 <!--
