--- a/static/website_css/base.css
+++ b/static/website_css/base.css
@@ -27,6 +27,7 @@ body{
     display: flex;
     align-items: center;
     font-size: 18px;
+    padding: 15px 0;
   }
   
   .custom-list .list-group-item a {
@@ -51,11 +52,11 @@ body{
   .logout-item a {
     background-color: red;
     color: white;
-    padding: 10px;
+    padding: 3px;
     text-align: center;
     display: block;
     border-radius: 5px;
-    margin: 0 80px;
+    margin: 0 120px;
   }
   
   .logout-item a:hover {
