--- a/templates/website_template/base.html
+++ b/templates/website_template/base.html
@@ -19,5 +19,30 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+    const toggleButton = document.querySelector('.fa-bars');
+    const sidebar = document.querySelector('.sidebar');
+    const sidebarLabels = document.querySelectorAll('.sidebar-label');
+
+    toggleButton.addEventListener('click', function() {
+        if (sidebar.classList.contains('expanded')) {
+            sidebar.classList.remove('expanded');
+            sidebarLabels.forEach(label => {
+                label.style.display = 'none'; // Esconde os textos imediatamente
+            });
+        } else {
+            sidebar.classList.add('expanded');
+            sidebar.addEventListener('transitionend', function onTransitionEnd() {
+                sidebarLabels.forEach(label => {
+                    label.style.display = 'inline-block'; // Mostra os textos após a transição
+                });
+                // Remove o evento para evitar múltiplas chamadas
+                sidebar.removeEventListener('transitionend', onTransitionEnd);
+            });
+        }
+    });
+});
+    </script>
 </body>
 </html>
