--- a/static/website_css/base.css
+++ b/static/website_css/base.css
@@ -1,10 +1,25 @@
-body{
+body {
     background-color: #e7e7e7;
-    
 }
 
-.user_btn   {
-    font-size: 20px;    
+.user_btn {
+    font-size: 22px;
+}
+
+.user_btnn {
+    font-size: 20px;
+}
+
+.user_btnn:hover{
+    color: #670099;
+}
+
+.navbar-brand{
+    padding-left: 90px;
+}
+
+.navbar-brand:hover{
+    color: #670099;
 }
 
 /* Estilo para o alerta */
@@ -28,28 +43,27 @@ body{
     align-items: center;
     font-size: 18px;
     padding: 15px 0;
-  }
-  
-  .custom-list .list-group-item a {
+}
+
+.custom-list .list-group-item a {
     color: inherit;
     text-decoration: none;
     flex-grow: 1;
     text-align: center; /* Centraliza o texto dentro do item da lista */
-  }
-  
-  .custom-list .list-group-item a:hover {
+}
+
+.custom-list .list-group-item a:hover {
     text-decoration: underline;
-  }
-  
-  /* Linha divisória entre o nome do usuário e a lista de links */
-  .divider {
+}
+
+/* Linha divisória entre o nome do usuário e a lista de links */
+.divider {
     border-top: 1px solid #868686; /* Linha um pouco mais escura */
     margin: 10px 30px;
-    
-  }
-  
-  /* Estilo personalizado para o link de logout */
-  .logout-item a {
+}
+
+/* Estilo personalizado para o link de logout */
+.logout-item a {
     background-color: red;
     color: white;
     padding: 3px;
@@ -57,11 +71,99 @@ body{
     display: block;
     border-radius: 5px;
     margin: 0 120px;
-  }
-  
-  .logout-item a:hover {
+}
+
+.logout-item a:hover {
     background-color: darkred;
     color: white;
     text-decoration: none;
-  }
-  
+}
+
+/* Estilo para a barra lateral */
+.sidebar {
+    width: 80px; /* largura inicial */
+    background-color: white;
+    border-right: 1px solid #868686;
+    position: fixed;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000; /* Garanta que a barra lateral fique acima de outros elementos */
+    transition: width 0.2s ease; /* Transição suave para a largura */
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+.sidebar.expanded {
+    width: 300px; /* largura expandida */
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.sidebar .sidebar-inner {
+    display: flex;
+    justify-content: center;
+    border: none;
+}
+
+.sidebar.expanded .sidebar-inner {
+    display: flex;
+    align-items: baseline;
+    text-align: left;
+    border: none;
+}
+
+.sidebar-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.sidebar.expanded .sidebar-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0; /* Remove margens padrão */
+    text-align: left; /* Alinha à esquerda por padrão */
+}
+
+.sidebar-list li {
+    margin-bottom: 10px; /* Espaçamento entre os itens */
+}
+
+.sidebar.expanded .sidebar-list li a{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.sidebar-list li a {
+    color: inherit;
+    text-decoration: none;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    padding: 15px 0;
+}
+
+.sidebar-list li a .sidebar-label {
+    margin-left: 10px; /* Espaçamento entre o ícone e o texto */
+    display: none; /* Esconde o nome inicialmente */
+}
+
+.sidebar.expanded .sidebar-list li a .sidebar-label {
+    display: inline-block; /* Mostra o nome quando a sidebar está expandida */
+    margin-top: -6px;
+}
+
+.sidebar.expanded .sidebar-list li a i {
+    margin-right: 10px;
+    flex-shrink: 0; /* Impede que o ícone diminua de tamanho */
+}
+
+.sidebar-list li a:hover {
+    color: #670099;
+}
