--- a/templates/website_template/navbar.html
+++ b/templates/website_template/navbar.html
@@ -1,5 +1,4 @@
 
-
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Portal</a>
@@ -9,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link user_btn" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+          <a class="nav-link user_btnn" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
             <i class="fa-solid fa-circle-user"></i>
             {{ user.username }}
           </a>
@@ -44,6 +43,21 @@
     </ul>
   </div>
 </div>
+
+<!-- Barra lateral -->
+<div class="sidebar">
+  <div class="sidebar-inner">
+    <ul class="sidebar-list">
+      <li><a href="#"><i class="fa-solid fa-bars"></i><span class="sidebar-label">Menu</span></a></li>
+      <li><a href="#"><i class="fa-solid fa-home"></i><span class="sidebar-label">Página inicial</span></a></li>
+      <li><a href="#"><i class="fa-solid fa-chart-line"></i><span class="sidebar-label">Dashboards</span></a></li>
+      <li><a href="#"><i class="fa-solid fa-file-lines"></i><span class="sidebar-label">Relatórios</span></a></li>
+      <li><a href="#"><i class="fa-solid fa-clock-rotate-left"></i><span class="sidebar-label">Histórico</span></a></li>
+      <li><a href="#"><i class="fa-solid fa-gear"></i><span class="sidebar-label">Configurações</span></a></li>
+    </ul>
+  </div>
+</div>
+
 
 
 
