--- a/templates/website_template/base.html
+++ b/templates/website_template/base.html
@@ -22,10 +22,28 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
     const toggleButton = document.querySelector('.fa-bars');
+    const toggleButtonn = document.querySelector('.menu');
     const sidebar = document.querySelector('.sidebar');
     const sidebarLabels = document.querySelectorAll('.sidebar-label');
 
     toggleButton.addEventListener('click', function() {
+        if (sidebar.classList.contains('expanded')) {
+            sidebar.classList.remove('expanded');
+            sidebarLabels.forEach(label => {
+                label.style.display = 'none'; // Esconde os textos imediatamente
+            });
+        } else {
+            sidebar.classList.add('expanded');
+            sidebar.addEventListener('transitionend', function onTransitionEnd() {
+                sidebarLabels.forEach(label => {
+                    label.style.display = 'inline-block'; // Mostra os textos após a transição
+                });
+                // Remove o evento para evitar múltiplas chamadas
+                sidebar.removeEventListener('transitionend', onTransitionEnd);
+            });
+        }
+    });
+    toggleButtonn.addEventListener('click', function() {
         if (sidebar.classList.contains('expanded')) {
             sidebar.classList.remove('expanded');
             sidebarLabels.forEach(label => {
