--- a/templates/website_template/navbar.html
+++ b/templates/website_template/navbar.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Portal</a>
+    <a class="navbar-brand" href="{% url 'index' %}">Portal</a>
     <div id="alerta" class="alerta">
       {% include 'partials/_alertas.html' %}
     </div>
@@ -48,8 +48,8 @@
 <div class="sidebar">
   <div class="sidebar-inner">
     <ul class="sidebar-list">
-      <li><a href="#"><i class="fa-solid fa-bars"></i><span class="sidebar-label">Menu</span></a></li>
-      <li><a href="#"><i class="fa-solid fa-home"></i><span class="sidebar-label">Página inicial</span></a></li>
+      <li><a href="#"><i class="fa-solid fa-bars"></i><span class="sidebar-label menu">Menu</span></a></li>
+      <li><a href="{% url 'index' %}"><i class="fa-solid fa-home"></i><span class="sidebar-label">Página inicial</span></a></li>
       <li><a href="#"><i class="fa-solid fa-chart-line"></i><span class="sidebar-label">Dashboards</span></a></li>
       <li><a href="#"><i class="fa-solid fa-file-lines"></i><span class="sidebar-label">Relatórios</span></a></li>
       <li><a href="#"><i class="fa-solid fa-clock-rotate-left"></i><span class="sidebar-label">Histórico</span></a></li>
